z-index of fixed tabs :metal:

--- a/css/style.css
+++ b/css/style.css
@@ -555,7 +555,7 @@ em {
 .fixed {
   position: fixed;
   background: #71C3D0;
-  z-index: 3;
+  z-index: 4;
   padding: 0 1em;
   text-decoration: none;
   color: white;
